caso3/kube_deploy_sts/metabase/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresservice
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres # tiene que coincidir con .spec.template.metadata.labels
  serviceName: "postgres"
  #replicas: 3 # por defecto es 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports: 
          - containerPort: 5432
            name: postgres
          volumeMounts:
          - name: datapost
            mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: datapost
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
